--- a/azure-build-pipelines.yml
+++ b/azure-build-pipelines.yml
@@ -28,5 +28,5 @@ steps:
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: Infrastructure'
   inputs:
-    PathtoPublish: app/Infrastructure
+    PathtoPublish: Infrastructure
     ArtifactName: Infrastructure
